<resources>
    <string name="app_name">SMA_CarPool</string>

    <string name="title_activity_search">Search</string>
    <string name="instructions">Choisissez votre position actuelle</string>
    <string name="resume">Résumé</string>
    <string name="confirmer">Confirmer</string>
    <string name="chercher_covoiturage">Chercher covoiturage</string>
    <string name="proposer_covoiturage">Proposer covoiturage</string>
    <string name="reset">Reset</string>
    <string name="accepter">Accepter</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_proposal_restriction">ProposalRestrictionActivity</string>
    <string name="title_activity_proposal_choices">ProposalChoicesActivity</string>
    <string name="nouvelle_offre">Nouvelle offre</string>
    <string name="modifier_une_offre">Vérifier une offre</string>
    <string name="restrictions">Restrictions</string>
    <string name="_30">30</string>
    <string name="_20">20</string>
    <string name="d_viation_maximum">Déviation maximum :</string>
    <string name="prix">Prix :</string>
    <string name="title_activity_proposal_check">ProposalCheckActivity</string>
    <string name="resume_des_offres">Résumé des offres</string>
    <string name="r_sultats">Résultats</string>
    <string name="title_activity_search_choices">SearchChoicesActivity</string>
    <string name="mes_recherches">Mes recherches</string>
    <string name="nouvelles_recherche">Nouvelles recherche</string>
    <string name="title_activity_my_research">MyResearchActivity</string>
    <string name="mes_r_sultats">Mes résultats</string>
</resources>
