<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".gui.RideActivity"
    tools:showIn="@layout/activity_search"
    android:clickable="false">

    <GridView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/map"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:numColumns="auto_fit"
        android:columnWidth="50dp"
        android:stretchMode="columnWidth"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/instructions"
        android:layout_below="@+id/map"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/instructions" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resume"
        android:id="@+id/resume"
        android:layout_below="@+id/instructions"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmer"
        android:id="@+id/confirm_button"
        android:layout_below="@+id/resume"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/reset_button"
        android:background="#cc3737"
        android:layout_below="@+id/confirm_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accepter"
        android:id="@+id/accept_button"
        android:background="#94c47c"
        android:layout_below="@+id/confirm_button"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
